# robot-control-lower-working

./: .gitignore  3D_Slicer_Transforms.cpp  3D_Slicer_Transforms.h  3D_slicer_interface.h  Benchtop_Accuracy_test.cpp  CMakeLists.txt  Home_test.cpp  Makefile  Matrix-test.h  Matrix.cpp  Matrix.h  NewTransform.h  NewTransform_test.cpp  Parse_home.cpp  Pivot-test.h  Pivot.cpp  Pivot.h  Point.h  PointCloudTransform.h  README.MD  Relative_test.cpp  Robot.h  Transform-test.h  Transform.cpp  Transform.h  angular_results_pitch.txt  angular_results_yaw.txt  backlash.cpp  command.txt  forward_inverse_kinematic_comparison.cpp  forward_kinematics.cpp  forward_kinematics.h  galil_control_calls.h  galil_control_test.cpp  get_frames_in_output_file.cpp  get_test_grid.cpp  grid.txt  gridy.txt  helperFunctions.h  home_results.txt  (+23 more)
.git_backup/: COMMIT_EDITMSG  config  index  packed-refs  shallow
.git_backup/logs/: HEAD
.git_backup/logs/refs/heads/: main
.git_backup/logs/refs/remotes/origin/: HEAD
.git_backup/objects/pack/: pack-8e0ee124c19e3750e7eabaa2c32a7bbec241424b.idx
.git_backup/refs/heads/: main
Galil/: A.dmc  F.dmc  PAE.dmc  PVT.dmc  axisF.dmc  backlash.dmc  boot.dmc  calibration.dmc  como.dmc  gotoA.dmc  gotoB.dmc  gotoC.dmc  gotoE.dmc  gotoF.dmc  helpers.dmc  home.dmc  homeA.dmc  includes  main.dmc  move.dmc  moveA.dmc  moveAContinuous.dmc  moveAll.dmc  moveF.dmc  rc.dmc  reHoA.dmc  reHoF.dmc  recedingHorizonA  test.dmc  test_run  test_run.dmc
Galil/motorsizer/amps/: my_amps.gmap  packs.json
Galil/motorsizer/motors/: my_motors.gmap  packs.json
Slicer_Extension/CIS2_Extension/: CMakeLists.txt
Slicer_Extension/CIS2_Extension/load_robot/: CMakeLists.txt  load_robot.py
Slicer_Extension/CIS2_Extension/load_robot/Resources/UI/: load_robot.ui
kinematic_calibration/: absolute_accuracy.cpp  atracsys_functions.cpp  atracsys_functions.h  data_collection.cpp  experiment.cpp  experiment_runner.cpp  forward_jacobian.cpp  helpers.h  inverse_kinematics.h  jacobian.h  kinematics.h  pivot_calibration.cpp  pivot_calibration.h  precision.cpp  read_csv.cpp  robot_backend_ros.h  robot_controller.h  robot_controller_ros.h  simulation.cpp  z_graph.cpp
kinematic_calibration/arduino_code1/: arduino_code1.ino
kinematic_calibration/backend/: CMakeLists.txt  backend.cpp  backend.h
kinematic_calibration/derivatives/loop_derivatives/: slider_x_offset_derivative.h
kinematic_calibration/ros2_ws/arduino_code/: arduino_code.ino  arduino_code1.ino
kinematic_calibration/ros2_ws/src/minimal_actuate_client/: CMakeLists.txt  package.xml
kinematic_calibration/ros2_ws/src/minimal_actuate_client/src/: minimal_actuate_client.cpp
kinematic_calibration/ros2_ws/src/my_robot_interfaces/: CMakeLists.txt  package.xml
kinematic_calibration/ros2_ws/src/my_robot_interfaces/action/: ActuateSlides.action
kinematic_calibration/ros2_ws/src/my_robot_server/: package.xml  setup.cfg  setup.py
kinematic_calibration/ros2_ws/src/my_robot_server/my_robot_server/: actuate_slides_server.py
kinematic_calibration/ros2_ws/src/send_info/: CMakeLists.txt  package.xml  send_info.cpp
kinematic_calibration/templated_classes/: Templated_Point.h  Templated_Transform.h
kinematic_calibration/templated_classes/auto_diff_class/: auto.h
kinematic_calibration/test/: test_auto.cpp  test_forward_kinematics.cpp  test_inverse_kinematics.cpp
scripts/: Makefile  geometry100000.ini  geometry2000.ini  geometry999.ini  geometry99900000.ini  geometryOriginal.ini  get_rot.cpp  img.csv  ini_helpers.h  ini_to_desmos.cpp  map2.py  orient_ini.cpp  pivot_needle.h  pivot_robot.h  run_experiment.sh
