<?xml version="1.0"?>
<package format="3">
  <name>send_info</name>
  <version>0.0.1</version>
  <description>Robot visualizer</description>
  <maintainer email="you@email.com">Tyler</maintainer>
  <license>MIT</license>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
</package>
